[package]
name = "memory-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/d-o-hub/rust-self-learning-memory"
readme = "README.md"
description = "Model Context Protocol (MCP) server with secure code execution sandbox for AI agents"
keywords = ["mcp", "sandbox", "code-execution", "ai", "security"]
categories = ["development-tools", "web-programming"]
documentation = "https://docs.rs/memory-mcp"

[[bin]]
name = "memory-mcp-server"
path = "src/bin/memory-mcp-server.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Local dependencies
memory-core = { path = "../memory-core" }
memory-storage-turso = { path = "../memory-storage-turso" }
memory-storage-redb = { path = "../memory-storage-redb" }

# MCP-specific dependencies
async-trait = "0.1.89"
parking_lot = "0.12.5"
url = "2.5.8"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
futures = "0.3.31"

# WASM JavaScript execution dependencies
# These are optional and gated behind feature flags for faster builds
rquickjs = { version = "0.11.0", features = ["parallel", "loader", "futures"], optional = true }  # DEPRECATED: gated behind feature `wasm-rquickjs`
wasmtime = { workspace = true, features = ["async", "cranelift", "wat", "cache"], optional = true }
wasmtime-wasi = { workspace = true, optional = true }  # Align with wasmtime version

# Javy JavaScript to WASM compilation dependencies (optional)
javy = { version = "6.0.0", optional = true }
javy-codegen = { version = "3.0.0", optional = true }
# javy-plugin-api = { version = "3.1.0", optional = true }  # Keep optional to avoid conflicts

# Additional dependencies for unified sandbox
chrono = { workspace = true }
rand = { workspace = true }

# Advanced pattern analysis dependencies
deep_causality = "0.13.3"
streaming_algorithms = "0.3.3"
rayon = "1.8"
base64 = "0.22.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# WASM backends are now optional - users must explicitly choose one
# Default includes wasmtime-backend as it's recommended for most use cases
default = ["wasmtime-backend"]
# WASMtime backend (recommended for most use cases)
wasmtime-backend = ["dep:wasmtime", "dep:wasmtime-wasi"]
# Deprecated: QuickJS WASM backend
wasm-rquickjs = ["dep:rquickjs"]
# Javy JavaScript backend (requires additional setup)
javy-backend = ["dep:javy", "dep:javy-codegen"]
# Enable OAuth 2.1 authorization support (future)
oauth = []
# Enable embedding configuration support (future)
embeddings = []
# Enable streaming implementation tests (performance benchmarks)
# See ADR-027: Strategy for Ignored Tests
# Use: cargo test --features streaming-impl
streaming-impl = []

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
memory-storage-redb = { path = "../memory-storage-redb" }
wat = "1.220"  # WAT parsing for tests

[[example]]
name = "memory_mcp_integration"
path = "examples/memory_mcp_integration.rs"

[[test]]
name = "simple_integration_tests"
path = "tests/simple_integration_tests.rs"

[[test]]
name = "mcp_integration_tests"
path = "tests/mcp_integration_tests.rs"

[[test]]
name = "persistent_storage_tests"
path = "tests/persistent_storage_tests.rs"

[[test]]
name = "advanced_pattern_analysis_comprehensive"
path = "tests/advanced_pattern_analysis_comprehensive.rs"

[[test]]
name = "mcp_integration_advanced"
path = "tests/mcp_integration_advanced.rs"

[[test]]
name = "performance_tests"
path = "tests/performance_tests.rs"

[[test]]
name = "security_tests"
path = "tests/security_tests.rs"

[lints.rust]
# Security-critical for sandbox operations
unsafe_code = "deny"

[lints.clippy]
# Protocol and serialization safety - critical for MCP security
correctness = { level = "deny" }
suspicious = { level = "deny" }
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
# JSON/serialization safety
missing_errors_doc = { level = "warn" }
missing_safety_doc = { level = "warn" }
