[package]
name = "do-memory-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/d-o-hub/rust-self-learning-memory"
readme = "README.md"
description = "Model Context Protocol (MCP) server for AI agents"
keywords = ["mcp", "ai", "memory"]
categories = ["development-tools", "web-programming"]
documentation = "https://docs.rs/do-memory-mcp"

[[bin]]
name = "do-memory-mcp-server"
path = "src/bin/memory-mcp-server.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Local dependencies
do-memory-core = { path = "../memory-core", version = "0.1.30" }
do-memory-storage-turso = { path = "../memory-storage-turso", version = "0.1.30" }
do-memory-storage-redb = { path = "../memory-storage-redb", version = "0.1.30" }

# MCP-specific dependencies
parking_lot = "0.12.5"
url = "2.5.8"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Additional dependencies
chrono = { workspace = true }
rand = { workspace = true }

base64 = "0.22.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# Optional OAuth authorization support
oauth = []
# Optional embeddings configuration support
embeddings = []
# Enable streaming implementation tests (performance benchmarks)
# See ADR-027: Strategy for Ignored Tests
# Use: cargo test --features streaming-impl
streaming-impl = []

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
do-memory-storage-redb = { path = "../memory-storage-redb" }
insta = { version = "1.47", features = ["json", "yaml"] }
proptest = "1.11"

[[example]]
name = "memory_mcp_integration"
path = "examples/memory_mcp_integration.rs"

[[test]]
name = "simple_integration_tests"
path = "tests/simple_integration_tests.rs"

[[test]]
name = "mcp_integration_tests"
path = "tests/mcp_integration_tests.rs"

[[test]]
name = "persistent_storage_tests"
path = "tests/persistent_storage_tests.rs"

[[test]]
name = "advanced_pattern_analysis_comprehensive"
path = "tests/advanced_pattern_analysis_comprehensive.rs"

[[test]]
name = "mcp_integration_advanced"
path = "tests/mcp_integration_advanced.rs"

[[test]]
name = "performance_tests"
path = "tests/performance_tests.rs"

[[test]]
name = "security_tests"
path = "tests/security_tests.rs"

[[test]]
name = "jsonrpc_fuzz_tests"
path = "tests/jsonrpc_fuzz_tests.rs"

[[test]]
name = "mcp_tool_coverage_tests"
path = "tests/mcp_tool_coverage_tests.rs"

[lints.rust]
# Security-critical for sandbox operations
unsafe_code = "deny"

[lints.clippy]
# Protocol and serialization safety - critical for MCP security
correctness = { level = "deny" }
suspicious = { level = "deny" }
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
# JSON/serialization safety
missing_errors_doc = { level = "warn" }
missing_safety_doc = { level = "warn" }
