[package]
name = "do-memory-storage-duckdb"
version = "0.1.31"
edition = "2021"
description = "DuckDB storage backend for the episodic memory system"

[dependencies]
do-memory-core = { path = "../memory-core" }
duckdb = { version = "1.1.1", features = ["bundled", "chrono", "uuid", "serde_json"] }
tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
parking_lot = "0.12"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.12"
anyhow = "1.0"

[features]
default = []
vss = []
parquet = []
analytics = ["vss", "parquet"]
