[package]
name = "do-memory-storage-duckdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DuckDB storage backend for the episodic memory system"

[dependencies]
do-memory-core = { path = "../memory-core", version = "0.1.31" }
duckdb = { version = "1.1.1", features = ["chrono", "uuid", "serde_json"] }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
parking_lot = "0.12"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
vss = []
parquet = []
analytics = ["vss", "parquet"]
