[package]
name = "memory-storage-redb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/d-o-hub/rust-self-learning-memory"
readme = "README.md"
description = "redb embedded storage backend for memory-core episodic learning system (cache layer)"
keywords = ["redb", "storage", "cache", "embedded-db", "ai-memory"]
categories = ["database", "caching"]
documentation = "https://docs.rs/memory-storage-redb"

[dependencies]
# Core dependencies
memory-core = { path = "../memory-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Database
redb = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
serde_json = { workspace = true }
