[package]
name = "memory-storage-redb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/d-o-hub/rust-self-learning-memory"
readme = "README.md"
description = "redb embedded storage backend for memory-core episodic learning system (cache layer)"
keywords = ["redb", "storage", "cache", "embedded-db", "ai-memory"]
categories = ["database", "caching"]
documentation = "https://docs.rs/memory-storage-redb"

[dependencies]
memory-core = { path = "../memory-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
postcard = { workspace = true }
redb = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
lz4_flex = { version = "0.12", default-features = false }
parking_lot = "0.12.5"

[dev-dependencies]
proptest = "1.5"
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
serde_json = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
correctness = { level = "deny" }
unwrap_used = { level = "warn" }
