[package]
name = "do-memory-storage-redb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/d-o-hub/rust-self-learning-memory"
readme = "README.md"
description = "redb embedded storage backend for do-memory-core episodic learning system (cache layer)"
keywords = ["redb", "storage", "cache", "embedded-db", "ai-memory"]
categories = ["database", "caching"]
documentation = "https://docs.rs/do-memory-storage-redb"

[dependencies]
# Core dependencies
do-memory-core = { path = "../memory-core", version = "0.1.26" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
postcard = { workspace = true }

# Database
redb = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Compression for cache persistence
lz4_flex = { version = "0.13", default-features = false }

# Synchronization
parking_lot = "0.12.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
serde_json = { workspace = true }
proptest = "1.11"

[lints.rust]
# In-process memory operations - focus on unsafe code and memory safety
unsafe_code = "deny"

[lints.clippy]
correctness = { level = "deny" }
# Serialize safety
unwrap_used = { level = "warn" }  # May need for internal redb operations
