[package]
name = "memory-storage-turso"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/d-o-hub/rust-self-learning-memory"
readme = "README.md"
description = "Turso/libSQL storage backend for the memory-core episodic learning system"
keywords = ["turso", "libsql", "storage", "database", "ai-memory"]
categories = ["database"]
documentation = "https://docs.rs/memory-storage-turso"

[dependencies]
# Core dependencies
memory-core = { path = "../memory-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }

# Database
libsql = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Synchronization
parking_lot = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
futures = "0.3"

[lints.rust]
# Allow unsafe only for specific use cases
unsafe_code = "warn"

[lints.clippy]
# External I/O requires stricter security and correctness
suspicious = { level = "deny" }
correctness = { level = "deny" }
style = { level = "warn" }
# SQL injection prevention
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
