[package]
name = "memory-storage-turso"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/d-o-hub/rust-self-learning-memory"
readme = "README.md"
description = "Turso/libSQL storage backend for the memory-core episodic learning system"
keywords = ["turso", "libsql", "storage", "database", "ai-memory"]
categories = ["database"]
documentation = "https://docs.rs/memory-storage-turso"

[features]
# Enable multi-dimension vector schema for Turso (Phase 0)
turso_multi_dimension = []
# Enable FTS5 hybrid search for enhanced retrieval
hybrid_search = []

[dependencies]
# Core dependencies
memory-core = { path = "../memory-core", features = ["hybrid_search"] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }

# Database
libsql = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Synchronization
parking_lot = "0.12"

# Cryptography for deterministic ID generation
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
futures = "0.3"
test-utils = { path = "../test-utils", features = ["turso"] }

[lints.rust]
# Allow unsafe only for specific use cases
unsafe_code = "warn"

[lints.clippy]
# External I/O requires stricter security and correctness
suspicious = { level = "deny" }
correctness = { level = "deny" }
style = { level = "warn" }
# SQL injection prevention
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
