[package]
name = "memory-storage-turso"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/d-o-hub/rust-self-learning-memory"
readme = "README.md"
description = "Turso/libSQL storage backend for the memory-core episodic learning system"
keywords = ["turso", "libsql", "storage", "database", "ai-memory"]
categories = ["database"]
documentation = "https://docs.rs/memory-storage-turso"

[features]
# Enable multi-dimension vector schema for Turso (Phase 0)
turso_multi_dimension = []
# Enable FTS5 hybrid search for enhanced retrieval
hybrid_search = []
# Enable keep-alive connection pool (reduces connection overhead from 45ms to ~5ms)
keepalive-pool = []

# Compression features for network bandwidth reduction (40% reduction target)
# Enable all compression algorithms (recommended for production)
compression = ["compression-lz4", "compression-zstd", "compression-gzip", "base64"]
# LZ4 compression - fast, low CPU overhead
compression-lz4 = ["lz4_flex"]
# Zstd compression - best compression ratio
compression-zstd = ["zstd"]
# Gzip compression - widely compatible
compression-gzip = ["flate2"]

[dependencies]
# Core dependencies
memory-core = { path = "../memory-core", features = ["hybrid_search"] }
memory-storage-redb = { path = "../memory-storage-redb" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }

 # Database
 libsql = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Synchronization
parking_lot = "0.12.5"

# Compression libraries (optional, enabled by compression feature)
# Using lz4_flex for safe LZ4 implementation (no unsafe code)
lz4_flex = { version = "0.12", optional = true, default-features = false }
# Zstd for best compression ratio
zstd = { version = "0.13", optional = true }
# Flate2 for Gzip (uses miniz_oxide by default, no C dependency)
flate2 = { version = "1.1", optional = true, default-features = true, features = ["rust_backend"] }
# Base64 encoding for compressed data storage
base64 = { version = "0.22.1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
futures = "0.3.31"
test-utils = { path = "../test-utils", features = ["turso"] }

[lints.rust]
# Allow unsafe only for specific use cases
unsafe_code = "warn"

[lints.clippy]
# External I/O requires stricter security and correctness
suspicious = { level = "deny" }
correctness = { level = "deny" }
style = { level = "warn" }
# SQL injection prevention
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
