[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Testing utilities and helpers for memory-core and storage backends"
keywords = ["testing", "test-utils", "ai-memory"]
categories = ["development-tools::testing"]
documentation = "https://docs.rs/test-utils"

[dependencies]
memory-core = { path = "../memory-core", version = "0.1.0" }
memory-storage-turso = { path = "../memory-storage-turso", version = "0.1.0" }
# memory-storage-redb = { path = "../memory-storage-redb" }  # Temporarily disabled

tokio = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
