[package]
name = "do-memory-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Testing utilities and helpers for do-memory-core and storage backends"
keywords = ["testing", "test-utils", "ai-memory"]
categories = ["development-tools::testing"]
documentation = "https://docs.rs/do-memory-test-utils"

[dependencies]
do-memory-core = { path = "../memory-core" }
do-memory-storage-turso = { path = "../memory-storage-turso", optional = true }
do-memory-storage-redb = { path = "../memory-storage-redb", optional = true }

serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
default = []
turso = ["dep:do-memory-storage-turso", "dep:rand", "dep:rand_chacha"]
redb = ["dep:do-memory-storage-redb"]
full = ["turso", "redb"]

# Inherit workspace lints

[lints]
workspace = true
