[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
license = "MIT"
publish = false

[dependencies]
memory-core = { path = "../memory-core" }
memory-storage-turso = { path = "../memory-storage-turso" }
memory-storage-redb = { path = "../memory-storage-redb" }
memory-mcp = { path = "../memory-mcp", features = ["wasmtime-backend"] }

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
tempfile.workspace = true
serial_test = "3.4"
uuid.workspace = true
serde_json.workspace = true
regex = "1.10"
assert_cmd = "2.2"
predicates = "3.1"
futures = "0.3"
governor = "0.10"
sysinfo = "0.38"
chrono.workspace = true

[[test]]
name = "quality_gates"
path = "quality_gates.rs"
harness = true

[[test]]
name = "cli_episode_workflow"
path = "e2e/cli_episode_workflow.rs"
harness = true

[[test]]
name = "cli_pattern_workflow"
path = "e2e/cli_pattern_workflow.rs"

[[test]]
name = "mcp_episode_chain"
path = "e2e/mcp_episode_chain.rs"
harness = true

[[test]]
name = "mcp_relationship_chain"
path = "e2e/mcp_relationship_chain.rs"
harness = true

[[test]]
name = "mcp_tag_chain"
path = "e2e/mcp_tag_chain.rs"
harness = true

[[test]]
name = "error_handling"
path = "e2e/error_handling.rs"
harness = true

[[test]]
name = "cli_workflows"
path = "e2e/cli_workflows.rs"
harness = true

[[test]]
name = "mcp_adr044_tests"
path = "e2e/mcp_adr044_tests.rs"
harness = true

[[test]]
name = "restart_persistence_test"
path = "e2e/restart_persistence_test.rs"
harness = true
